# purePyChess

./: .gitignore  LICENSE  README.md  plan-purePyChess.prompt.md  pyproject.toml  pytest.ini
purepychess/: __init__.py  config.py  encoding.py  engine.py  mcts.py  model.py  weights.py
purepychess/train/: __init__.py  config.py  preprocess.py  pretrain.py  replay.py  selfplay.py
tests/: conftest.py  test_encoding.py  test_engine.py  test_mcts.py  test_model.py  test_weights.py
tests/train/: test_preprocess.py  test_pretrain.py  test_replay.py
