[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "purepychess"
requires-python = ">=3.10"
dependencies = ["torch", "python-chess", "numpy", "huggingface_hub"]

[project.optional-dependencies]
train = ["h5py"]

[project.scripts]
purepychess = "purepychess.engine:main"
