[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "purepychess"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["torch", "python-chess", "numpy", "huggingface_hub"]

[project.optional-dependencies]
train = ["h5py"]

[project.scripts]
purepychess = "purepychess.engine:main"

[tool.setuptools.packages.find]
where = ["."]
